<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/console_output_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/console_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v4.widget.NestedScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/pre_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pre_auth"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/refund"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/refund"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reprint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/refund" />

</android.support.constraint.ConstraintLayout>